# matheusfabiao-portfolio-website

./: pyproject.toml
djangoapp/core/: settings.py  urls.py
djangoapp/portfolio/: admin.py  models.py  urls.py  views.py
djangoapp/portfolio/migrations/: 0001_initial.py
djangoapp/templates/: base.html
dotenv_files/: .env-example
